--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>  <link href="node_modules/froala-editor/css/froala_editor.pkgd.min.css" rel="stylesheet"></app-root>
 </body>
 </html>
